--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "Ejercicios_JS/3.js",
   "scripts": {
-    "dev": "nodemon app.js"
+     "dev": "nodemon Ejercicios_JS/3.js"
   },
   "repository": {
     "type": "git",
@@ -15,8 +15,5 @@
     "url": "https://github.com/HonorianoPlocs/QuintoMartes/issues"
   },
   "homepage": "https://github.com/HonorianoPlocs/QuintoMartes#readme",
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+  "description": ""
 }
